@@ -217,8 +217,11 @@ class TestNamedTuple(unittest.TestCase):
         self.assertEqual(p, Point._make([11, 22]))                          # test _make classmethod
         self.assertEqual(p._fields, ('x', 'y'))                             # test _fields attribute
         self.assertEqual(p._replace(x=1), (1, 22))                          # test _replace method
-        self.assertEqual(p._asdict(), dict(x=11, y=22))                     # test _asdict method
-        self.assertEqual(vars(p), p._asdict())                              # verify that vars() works
+        self.assertEqual(p.__dict__,
+                         OrderedDict([('x', 11), ('y', 22)]))               # test __dict__ attribute
+        self.assertEqual(vars(p), p.__dict__)                               # verify that vars() works
+        with self.assertWarns(DeprecationWarning):                          # check deprecate of _asdict
+            p._asdict()
 
         try:
             p._replace(x=1, error=2)
